--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body {
   font-size: 62.5%;
 }
 
+/* Header */
+
 .header {
   display: flex;
   justify-content: center;
@@ -15,6 +17,8 @@ body {
   font-weight: lighter;
   letter-spacing: 0.5rem;
 }
+
+/* Action Container */
 
 .container-one {
   display: flex;
@@ -39,4 +43,23 @@ body {
 
 .action:hover {
   background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* Score Container */
+
+.container-two {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: 5rem;
+  font-size: 2.4rem;
+  font-weight: lighter;
+  letter-spacing: 0.5rem;
+}
+
+.score {
+  margin-top: 3rem;
+  font-size: 4rem;
 }
